--- a/crypto-app/package.json
+++ b/crypto-app/package.json
@@ -20,7 +20,7 @@
     "framer-motion": "^11.11.9",
     "lightweight-charts": "^4.2.1",
     "lucide-react": "^0.453.0",
-    "next": "14.2.15",
+    "next": "^15.0.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
